Done v0.4.7:
Bugfixes:
    -Fixed a small visual bug with long annotations
    -Fixed a small visual bug when loading components for the first time in the index page
    -Minor fix to the index style





Done v0.4.6:
Bugfixes:
    -Fixed preview getting buggy if the machine is very busy;
    -Fixed Firefox bug on modal positioning;
    -Fixed minor bug with the node annotation table;





Done v0.4.5:
-Core
    -Fixed -help messages
    -Added how to customize databases in the readme and help messages
    -Added a better error handling in phantomjs in case of problems with javascript
    -Rendering of the thumbnails now are fully multithreaded
    -Fixed a bug in step2 when no newick file is provided
    -Kmer-size can now go up to 256
-Index page
    -Added a different mouse icon when the mouse is over the preview
-Graph page
    -Added the zoom-in feature when selecting all nodes or the significant nodes only
    -Increased the height of the annotation table when opening the graph from 13% of the screen to 15%
        -Better for smaller screens
    -Refactored the way that the annotation is shown in the graph page, reducing the size of the files and allowing to get the annotation + e-value per node
    -The annotation of each node is now shown in a pop-up menu as a spreadsheet table, ordered by E-value
    -Updated Help





Done v0.4.4:
-Core
    -Fixed output folder from being fixed to being a parameter (-output)
    -Reworked all the final and temporary files structure:
        -Each step now has a separate folder where all files from that step are written
    -DBGWAS now requires less disk space than before
    -DBGWAS now works with only one installation
    -Improved the contents of the final package
    -Fixed -help and -version parameters
-Summary page
    -Removed "Annotations on significant nodes" phrase;
    -Showing now only the first 3 annotations in the annotation table
    -Small fixes on the presentation of the annotation tables