@@ -4,27 +4,18 @@ Prioritaire
 Paper TODO:
 v0.4.8:
 -Test:
--Added thirdparty licenses to file THIRDPARTIES
-    -Check if it is included in the zipped file as well...
--Added Changelog to file Changelog
-    -Check if it is included in the zipped file as well...
--Fix large kmer size bug
+-Run with the new DBs and check:
 -DBGWAS_index_tag renamed to DBGWAS_general_tag;
 -DBGWAS_graph_tag renamed to DBGWAS_specific_tag;
+    -Update example and images in the readme
+    -Check README and check if everything is fine
 -DBGWAS now processes all tags in the format "DBGWAS_xyz_tag = <value>;" tag
     -All headers like this are processed and a xyz column is added to the annotation table in the graph page;
     -DBGWAS_general_tag and DBGWAS_specific_tag are the exceptions to this rule;
+    -Compare with previous version and check if everything is fine
 
-
--Code
-    -Fix copy and paste of cells containing annotation;
-        -Asked on stack overflow
-    -Fix cytoscape export button regarding annotation table
-        -Asked on stack overflow
-
--README
-    -Update Memory and CPU requirements section in the README
-        -Rerun with 16 cores? 8?
+-Update Memory and CPU requirements section in the README
+    -Rerun with 8 cores
 
 -Paper
     -Update dbgwas.pdf (section 2 Methods)
@@ -54,9 +45,29 @@ v0.4.8:
 TODO list
 ---------------------------------------------------------------------------------------------------------------------------------------------
 High priority TODO:
-  -Receive as input reads instead of contigs
-  -treat NA better
-    -We just removed from the input for now
+    -Receive as input reads instead of contigs
+    -treat NA better
+        -We just removed from the input for now
+    -Large kmer size bug:
+        -Even if we set in CMakeLists.txt:
+            set (KSIZE_LIST "32   64   96  128  160  192  224  256")
+        -We still can't run the tool with a large kmer size due to:
+            leandro@ngs-provisoire:/data2/leandro/GWAS/DBGWAS-0.4.8-Linux-precompiled/bin$ ./DBGWAS -strains pseudomonas_aeruginosa_full_dataset/strains -newick pseudomonas_aeruginosa_full_dataset/strains.newick -nc_db Resistance_DB_for_DBGWAS.fasta -pt_db uniprot_sprot_bacteria_for_DBGWAS.with_extra_tags.fasta -nb-cores 4 -k 165 -output output_test_k_165
+            Step 1. Building DBG and mapping strains on the DBG...
+            [WARNING] Skipping strain WH-SGI-V-07286 because its phenotype is NA
+            [WARNING] Skipping strain WH-SGI-V-07290 because its phenotype is NA
+            [DSK: nb solid kmers found : 140764976   ]  100  %   elapsed:  12 min 3  sec   remaining:   0 min 0  sec   cpu: 153.4 %   mem: [ 924, 4598, 4598] MB
+            [Building BooPHF]  99.8 %   elapsed:   0 min 57 sec   remaining:   0 min 0  sec
+            [MPHF: populate                          ]  100  %   elapsed:   1 min 22 sec   remaining:   0 min 0  sec   cpu:  99.9 %   mem: [ 924,  924, 4598] MB
+            EXCEPTION: kmer size 165 too big for cascading bloom filters
+        -The maximum k-mer size we can use is 128
+        -I am setting in CMakeLists.txt back to:
+            set (KSIZE_LIST "32   64   96  128")
+
+    -Fix copy and paste of cells containing annotation;
+        -Asked on stack overflow
+    -Fix cytoscape export button regarding annotation table
+        -Asked on stack overflow
 
 
 
